# AchieveRAG

./: .env.example  .gitignore  ARCHITECTURE.md  README.md  ROADMAP.md  main.py  pyproject.toml  render.yaml  requirements-prod.txt  requirements.txt  vercel.json
backend/: __init__.py  main.py
backend/config/: __init__.py  settings.py
backend/core/: __init__.py  document_loader.py  embeddings.py  llm_client.py  rag_chain.py  text_splitter.py  vectorstore.py
backend/db/: __init__.py  database.py
backend/models/: __init__.py  schemas.py
backend/routers/: __init__.py  chat.py  conversations.py  documents.py  settings.py
backend/services/: __init__.py  conversation_service.py  document_service.py  rag_service.py
backend/utils/: __init__.py  logger.py
frontend/: index.html
frontend/css/: chat.css  components.css  history.css  settings.css  style.css  upload.css
frontend/js/: api.js  app.js  chat.js  components.js  document-preview.js  history.js  settings.js  upload.js
scripts/: init_db.py
